
syntax = "proto3";

package api.dapr;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/tkeel-io/core-broker/api/dapr;dapr";
option java_multiple_files = true;
option java_package = "api.dapr";

service Subscribe {
	rpc GetSubscribe (google.protobuf.Empty) returns (ListTopicSubscriptionsResponse) {
		option (google.api.http) = {
			get : "/subscribe"
		};
	};
}

// ListTopicSubscriptionsResponse is the message including the list of the subscribing topics.
message ListTopicSubscriptionsResponse {
    // The list of topics.
    repeated TopicSubscription subscriptions = 1;
  }
  
  // TopicSubscription represents topic and metadata.
  message TopicSubscription {
    // Required. The name of the pubsub containing the topic below to subscribe to.
    string pubsubname = 1;
  
    // Required. The name of topic which will be subscribed
    string topic = 2;
  
    // The optional properties used for this topic's subscription e.g. session id
    map<string,string> metadata = 3;
  
    // The optional routing rules to match against. In the gRPC interface, OnTopicEvent
    // is still invoked but the matching path is sent in the TopicEventRequest.
    string route = 5;
  }